# stl2png

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  fragment.glsl  readme.md  vertex.glsl
stl2png/: CMakeLists.txt  main.cpp  stb.cpp
stl2png/glad/include/glad/: glad.h
stl2png/glad/src/: glad.c
